--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,18 +6,32 @@
 /* @font-face {} */
 
 @import url("https://v1.fontapi.ir/css/ShabnamFD");
-
+.navbar {
+  background-color: rgba(255, 255, 255, 0.13);
+  backdrop-filter: blur(100px);
+  -webkit-box-shadow: 0px 4px 23px -15px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 4px 23px -15px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 4px 23px -15px rgba(0, 0, 0, 0.75);
+}
+header {
+  /* background-color: black; */
+  height: 111px;
+}
 nav .container {
   flex-direction: column;
   direction: rtl;
 }
 .navbar-nav li {
   margin-right: 30px;
+  color: white;
 }
 .dropdown-menu {
   border-radius: 10px;
   text-align: center;
   /* direction: rtl; */
+}
+#dropdownMenu1 {
+  color: black;
 }
 
 #test {
@@ -46,3 +60,184 @@ nav .container {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 }
+
+/* //////// container-fluid ////////// */
+.container-fluid {
+  margin: 10px 0px 5px 0px;
+}
+/* ///carousel/// */
+
+.carousel-item img {
+  border-radius: 10px;
+}
+/* ///carousel/// */
+
+.SideImage img {
+  margin: 5px;
+  border-radius: 10px;
+}
+/* //////// container-fluid ////////// */
+
+/* //////// container-fluid CAROUSEL ////////// */
+.uk-panel {
+  background-color: red;
+}
+
+::-webkit-scrollbar {
+  /* Webkit */
+  width: 0;
+  height: 0;
+}
+.hs {
+  display: flex;
+  overflow-x: scroll;
+  justify-content: space-between;
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE 10+ */
+  -webkit-overflow-scrolling: touch;
+  margin: 0 -20px;
+}
+.hs__header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.hs__headline {
+  flex: 1;
+}
+.hs__arrows {
+  align-self: center;
+}
+.hs__arrows .arrow:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  content: "";
+  background-size: contain;
+  filter: brightness(5);
+  width: 18px;
+  height: 12px;
+  cursor: pointer;
+}
+.hs__arrows .arrow.disabled:before {
+  filter: brightness(2);
+}
+.hs__arrows .arrow.arrow-prev:before {
+  transform: rotate(90deg);
+  margin-right: 10px;
+}
+.hs__arrows .arrow.arrow-next:before {
+  transform: rotate(-90deg);
+}
+.hs__item {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: calc(100% / 4 - (10px * 2) - (20px / 4));
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  user-select: none;
+}
+@media only screen and (max-width: 990px) {
+  .hs__item {
+    flex-basis: calc(100% / 3 - (10px * 2) - (20px / 3));
+  }
+}
+.hs__item:last-child:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10px;
+  height: 1px;
+  right: calc(10px * 2 * -1);
+}
+.hs__item:first-child {
+  margin-left: calc(10px * 2);
+}
+.hs__item__description {
+  z-index: 1;
+  align-self: flex-start;
+  margin: 10px 0;
+}
+.hs__item__subtitle {
+  color: #aaa;
+  display: block;
+}
+.hs__item__image__wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+}
+.hs__item__image {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media only screen and (min-width: 990px) {
+  .hs__wrapper {
+    overflow: hidden;
+  }
+}
+@media (hover: none) and (pointer: coarse) {
+  .hs__wrapper .hs__arrows {
+    display: none;
+  }
+  .hs__wrapper .hs__item {
+    flex: 1 0 calc(23% - 10px * 2);
+  }
+}
+@media only screen and (hover: none) and (pointer: coarse) and (max-width: 990px) {
+  .hs__wrapper .hs__item {
+    flex: 1 0 calc(45% - 10px * 2);
+  }
+}
+/* Base Styling */
+/* body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: "Muli", sans-serif;
+  color: white;
+  background: white;
+  line-height: 1.5;
+  letter-spacing: 0.15px;
+} */
+#container {
+  max-width: 990px;
+  padding: calc(10px * 2);
+  margin: 0 auto;
+  background: #121212;
+  mix-blend-mode: invert;
+  position: relative;
+}
+#container:after {
+  content: "";
+  width: 100vw;
+  height: 100%;
+  background: #212121;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  z-index: -1;
+}
+@media only screen and (min-width: 990px) {
+  #container {
+    padding: calc(10px * 4) calc(10px * 8);
+  }
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+/* //////// container-fluid CAROUSEL ////////// */
